k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: msc-de1-project
  labels:
    app.kubernetes.io/part-of: msc-de1-flask-app
