k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: msc-de1-flask-app
  namespace: msc-de1-project
  labels:
    app.kubernetes.io/name: msc-de1-flask-app
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: msc-de1-flask-app
  ports:
    - name: http
      port: 80
      targetPort: http
